# charly_3d_engine

./: CMakeLists.txt
resources/shaders/: ambient_light.frag  ambient_light.vert  base_shader.frag  base_shader.vert  diffuse_light.frag  diffuse_light.vert  flat_color.frag  text.frag  text.vert  texturing.frag  texturing.vert
src/: CMakeLists.txt
src/cpp/: CMakeLists.txt  Camera.cpp  Font.cpp  GLFWinputHandler.cpp  GlyphAtlas.cpp  IndexBuffer.cpp  InputHandler.cpp  Logger.cpp  Material.cpp  Mesh.cpp  Model.cpp  ModelLoader.cpp  OpenGLapp.cpp  PerformanceStatisticManager.cpp  Renderer.cpp  Shader.cpp  ShapeFactory.cpp  Text.cpp  Texture.cpp  Transformable.cpp  VertexArray.cpp  VertexBuffer.cpp  Window.cpp  main.cpp  utils.cpp
src/include/: BufferLayout.hpp  Camera.hpp  Drawable.hpp  Font.hpp  GLFWinputHandler.hpp  GlyphAtlas.hpp  IndexBuffer.hpp  InputHandler.hpp  Light.hpp  LightSource.hpp  Logger.hpp  Material.hpp  Mesh.hpp  Model.hpp  ModelLoader.hpp  OpenGLUtils.hpp  OpenGLapp.hpp  PerformanceStatisticManager.hpp  Renderer.hpp  Shader.hpp  ShapeFactory.hpp  Text.hpp  Texture.hpp  Transformable.hpp  VertexArray.hpp  VertexBuffer.hpp  Window.hpp  utils.hpp
